--- a/main_app/templates/editor.html
+++ b/main_app/templates/editor.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!-- <img src="/main_app/note1.jpeg" alt="note image"> -->
     <nav class="navbar is-info">
         <div class="navbar-brand">
             <a href="{% url 'editor' %}" class="navbar-item">Notes</a>
@@ -73,7 +74,7 @@
                     </div>
                 </form>
             </div>
-            <div class="column is-2">
+            <div class="column is-4">
                 <aside class="menu">
                     <p class="menu-label">Documents</p>
 
